<resources>
    <string name="app_name">따라오개</string>
    <string name="main_home">홈</string>
    <string name="main_walk">산책</string>
    <string name="main_mypage">마이페이지</string>
    <string name="home_title">반가워요!</string>
    <string name="home_a_few_hours_ago">시간 전</string>
    <string name="home_time_none">최근에 산책한 기록이 없어요!</string>
    <string name="home_time_more_than_a_day">산책을 안한지 하루가 넘었어요!</string>
    <string name="home_time_just_now">금방 산책을 다녀왔어요!</string>
    <string name="home_walk_graph_title">금주 산책 이력</string>
    <string name="home_weather_title">오늘의 날씨</string>
    <string name="home_weather_location">홍성군</string>
    <string name="home_weather_fine_dust">미세먼지</string>
    <string name="home_weather_ultra_fine_dust">초미세먼지</string>
    <string name="home_weather_location_temperature">25℃</string>
    <string name="home_weather_location_conditions">맑음</string>
    <string name="home_weather_fine_dust_conditions">좋음</string>
    <string name="home_weather_ultra_fine_dust_conditions">나쁨</string>
    <string name="home_walk_graph_no_data">최근 산책 데이터가 없어요.</string>
    <string name="home_weather_real_time_data">2024.05.28 17:38</string>
    <string name="item_home_dog_selection_name">{dogname}</string>
    <string name="home_weather_no_data">위치 권한 설정 또는 인터넷 연결을 해야합니다.</string>
    <string name="home_dialog_location_title">위치 권한 설정</string>
    <string name="home_dialog_location_message">오늘의 날씨 정보를 확인 하기 위해서 위치 권한을 허용 해야 합니다. 위치 권한 설정 화면으로 이동하시겠습니까?</string>
    <string name="home_dialog_location_positive_button">네</string>
    <string name="home_dialog_location_negative_button">아니요</string>
    <string name="home_dialog_location_neutral_button">나중에</string>
    <string name="home_toast_location_no_permission">위치 권한이 없습니다.</string>
    <string name="home_no_selected_dog">반려견을 선택해 주세요.</string>
    <string name="home_progressbar_rate">7개 중 5개 흭득</string>
    <string name="home_stamp_title">금주 산책 도장 달성률</string>
    <string name="home_stamp_see_more">전체 보기</string>
    <string name="home_walk_graph_move_to_history">상세 보기</string>
    <string name="home_walk_add_dog">반려견을 추가해 주세요!</string>
    <string name="home_walk_graph_information">선택한 반려견의 최근 1주일 산책 그래프입니다.</string>
    <string name="msg_load_walking_data_fail">산책 데이터 불러오기에 실패했습니다.</string>
    <string name="msg_load_weather_fail">날씨 데이터를 불러오지 못했습니다.</string>
    <string name="msg_load_walk_stamp_data_fail">도장 데이터 불러오기에 실패했습니다.</string>
    <string name="home_detail_title">산책 이력</string>
    <string name="home_detail_walking_time">산책 시간</string>
    <string name="home_detail_walking_distance">산책 거리</string>
    <string name="home_detail_walking_km">km</string>
    <string name="home_detail_with_dogs">산책을 함께한 반려견</string>
    <string name="home_detail_stamp">받은 산책 도장</string>
    <string name="home_history_title">산책 모아보기</string>
    <string name="home_history_walk_graph_title">산책 그래프</string>
    <string name="home_history_stamp_title">이번주 산책 도장</string>
    <string name="home_history_walk_history">산책기록</string>
    <string name="home_history_walk_graph_no_data">최근 산책 데이터가 없어요.</string>
    <string name="home_history_walk_graph_select_calendar">날짜 선택</string>
    <string name="home_history_walk_history_no_data">이번달 산책 기록이 없습니다.</string>
    <string name="home_history_walk_graph_information">선택한 반려견의 최근 한 달간의 산책 그래프입니다.</string>
    <string name="home_history_dialog_year">2024</string>
    <string name="home_history_dialog_month_1">1월</string>
    <string name="home_history_dialog_month_2">2월</string>
    <string name="home_history_dialog_month_3">3월</string>
    <string name="home_history_dialog_month_4">4월</string>
    <string name="home_history_dialog_month_5">5월</string>
    <string name="home_history_dialog_month_6">6월</string>
    <string name="home_history_dialog_month_7">7월</string>
    <string name="home_history_dialog_month_8">8월</string>
    <string name="home_history_dialog_month_9">9월</string>
    <string name="home_history_dialog_month_10">10월</string>
    <string name="home_history_dialog_month_11">11월</string>
    <string name="home_history_dialog_month_12">12월</string>
    <string name="home_history_dialog_map_content">따라오개에서 산책 이력을 공유해요!</string>
    <string name="home_history_dialog_map_chooser">공유하기</string>
    <string name="home_history_dialog_map_fail_message">공유하기에 실패했어요.</string>
    <string name="home_history_walk_adapter_km">km</string>
    <string name="home_history_walk_adapter_minute">분</string>
    <string name="home_add_title">반려견 정보</string>
    <string name="home_add_dog_name_title">이름*</string>
    <string name="home_add_dog_name_hint">이름</string>
    <string name="home_add_dog_gender_title">성별*</string>
    <string name="home_add_dog_gender_male">남아</string>
    <string name="home_add_dog_gender_female">여아</string>
    <string name="home_add_dog_age_title">나이</string>
    <string name="home_add_dog_age_hint">나이를 입력해주세요.</string>
    <string name="home_add_dog_breed_title">견종</string>
    <string name="home_add_dog_breed_hint">견종을 입력해주세요</string>
    <string name="home_add_dog_memo_title">메모</string>
    <string name="home_add_dog_memo_hint">반려견의 성격이나 메모를 입력해주세요.</string>
    <string name="home_add_edit_completed_button">완료</string>
    <string name="home_add_please_add_name">이름은 필수 작성 항목입니다!</string>
    <string name="home_add_please_write_under_100">100 이하의 나이를 입력해주세요.</string>
    <string name="home_add_msg_fail_insert">반려견 정보 업로드에 실패했습니다.</string>
    <string name="home_add_msg_success_insert">반려견 정보가 추가되었습니다.</string>
    <string name="home_all_stamp_msg_data_fail">도장 데이터를 불러오기에 실패했습니다.</string>
    <string name="home_all_stamp_msg_load_changes_fail">변경된 도장 데이터를 정상적으로 불러오지 못했습니다.</string>
    <string name="home_all_stamp_title">모든 산책 도장 목록</string>
    <string name="home_all_stamp_item_stamp_title">다다익선</string>
    <string name="home_all_stamp_item_stamp_num_title">내가 얻은 도장 보러가기</string>
    <string name="home_all_stamp_item_stamp_click_button">Click</string>
    <string name="stamp_detail_title">산책 도장 정보</string>
    <string name="stamp_detail_stamp_title">다다익선</string>
    <string name="stamp_detail_stamp_description">다다익선은 어쩌구..저쩌구..</string>
    <string name="stamp_detail_item_stamp_date">2024.06.18 23:22</string>
    <string name="stamp_detail_empty_data">흭득한 산책 도장이 없습니다.</string>
    <string name="walk_start">산책하기</string>
    <string name="walk_walking_distance">거리</string>
    <string name="walk_walking_time">시간</string>
    <string name="walk_finish_title">산책 완료</string>
    <string name="walk_finish_walking_time">산책 시간</string>
    <string name="walk_finish_walking_distance">산책 거리</string>
    <string name="walk_finish_walking_km">km</string>
    <string name="walk_finish_with_dogs">오늘 산책을 함께한 반려견</string>
    <string name="walk_finish_stamp">오늘 모은 산책 도장</string>
    <string name="walk_finish_done">산책 끝!</string>
    <string name="walk_finish_stamp_done">확인했어요!</string>
    <string name="walk_finish_stamp1">오늘의 산책 완료</string>
    <string name="walk_finish_stamp2">3일 연속 산책</string>
    <string name="walk_finish_stamp3">5일 연속 산책</string>
    <string name="walk_finish_stamp4">7일 연속 산책</string>
    <string name="walk_finish_stamp5">다다익선</string>
    <string name="walk_finish_stamp6">단거리 마라토너</string>
    <string name="walk_finish_stamp7">중거리 마라토너</string>
    <string name="walk_finish_stamp8">장거리 마라토너</string>
    <string name="require_map_permission">지도 기능 이용을 위해 권한 허용이 필요합니다</string>
    <string name="require_walk_permission">산책 기능 이용을 위해 권한 허용이 필요합니다</string>
    <string name="msg_no_selected_dog">선택된 반려견이 없습니다</string>
    <string name="msg_load_store_fail">인근 스폿 정보를 불러올 수 없습니다</string>
    <string name="msg_load_dog_fail">반려견 데이터 불러오기에 실패했습니다</string>
    <string name="msg_no_network_connection">인터넷 연결 상태를 확인해주세요</string>
    <string name="msg_no_gps_connection">산책 정보를 트래킹 하기 위해 GPS를 켜주세요</string>
    <string name="msg_short_walking_time">산책 시간이 너무 짧아 기록되지 않았습니다</string>
    <string name="msg_walk_upload_fail">산책 결과 업로드에 실패했습니다</string>
    <string name="msg_check_stamp_fail">스탬프 확인에 실패했습니다</string>
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_information_edit_title">정보 수정</string>
    <string name="mypage_information_dog_edit">나의 반려견 정보</string>
    <string name="mypage_information_dog_add">나의 반려견 정보 추가</string>
    <string name="mypage_setting_title">설정</string>
    <string name="mypage_setting_dark_theme">다크테마</string>
    <string name="mypage_membership_management_title">회원 관리</string>
    <string name="mypage_membership_management_sign_out">로그아웃</string>
    <string name="mypage_membership_management_delete">회원탈퇴</string>
    <string name="mypage_privacy_policy">개인정보처리방침</string>
    <string name="mypage_use_terms">서비스 이용약관</string>
    <string name="mypage_agree_privacy_policy">개인정보처리방침 동의</string>
    <string name="msg_sign_out_fail">로그아웃에 실패했습니다</string>
    <string name="msg_delete_user_fail">회원 탈퇴에 실패했습니다</string>
    <string name="mypage_function_set_title">기능 설정</string>
    <string name="mypage_set_alarm">산책 알림 설정</string>
    <string name="mypage_check_password">비밀번호가 틀렸습니다.</string>
    <string name="msg_delete_account">계정을 삭제하시겠습니까?</string>
    <string name="msg_delete_account_context">계정 삭제 시 \n산책, 반려견 데이터가 삭제됩니다. \n정말 삭제하시겠습니까?</string>
    <string name="email_delete_account_title">계정 삭제를 위해 비밀번호를 입력해 주세요.</string>
    <string name="msg_not_found_file">파일을 찾을 수 없습니다.</string>
    <string name="mypage_privacy_title">개인정보처리방침</string>
    <string name="mypage_privacy_text">본 개인정보 처리방침은..</string>
    <string name="mypage_edit_pet_title">반려견 정보</string>
    <string name="mypage_edit_pet_edit_button">수정하기</string>
    <string name="mypage_add_dog">추가하기</string>
    <string name="mypage_edit_pet_dog_name_title">이름*</string>
    <string name="mypage_edit_pet_dog_name_hint">이름</string>
    <string name="mypage_edit_pet_dog_gender_title">성별*</string>
    <string name="mypage_edit_pet_dog_gender_male">남아</string>
    <string name="mypage_edit_pet_dog_gender_female">여아</string>
    <string name="mypage_edit_pet_dog_age_title">나이</string>
    <string name="mypage_edit_pet_dog_age_hint">나이를 입력해주세요.</string>
    <string name="mypage_edit_pet_dog_breed_title">견종</string>
    <string name="mypage_edit_pet_dog_breed_hint">견종을 입력해주세요</string>
    <string name="mypage_edit_pet_dog_memo_title">메모</string>
    <string name="mypage_edit_pet_dog_memo_hint">반려견의 성격이나 메모를 입력해주세요.</string>
    <string name="mypage_edit_pet_edit_completed_button">수정 완료</string>
    <string name="mypage_delete_dog">삭제하기</string>
    <string name="mypage_delete_dog_thumbnail_positive">확인</string>
    <string name="mypage_delete_dog_thumbnail_negative">취소</string>
    <string name="mypage_edit_msg_fail_update">반려견 정보 업데이트에 실패했습니다.</string>
    <string name="mypage_edit_msg_success_update">반려견 정보가 업데이트되었습니다.</string>
    <string name="mypage_edit_msg_there_are_not_changed">업데이트 할 정보가 없습니다.</string>
    <string name="detail_pet_empty_list">반려견 정보가 없습니다.</string>
    <string name="detail_pet_delete_positive">확인</string>
    <string name="detail_pet_delete_negative">취소</string>
    <string name="detail_pet_delete_complete">삭제되었습니다.</string>
    <string name="msg_load_changes_fail">변경된 반려견 데이터를 정상적으로 불러오지 못했습니다.</string>
    <string name="msg_delete_dog_fail">반려견 삭제가 실패했습니다</string>
    <string name="item_home_history_date">2024.05.28 17:38</string>
    <string name="item_home_history_location">광진구 화양동</string>
    <string name="item_home_history_distance">1.3km</string>
    <string name="item_home_history_duration">32분</string>
    <string name="login_title">따라오개에서\n산책을 시작해 볼까요?</string>
    <string name="login">로그인</string>
    <string name="login_email">이메일</string>
    <string name="login_password">비밀번호</string>
    <string name="login_account">계정이 없으신가요?</string>
    <string name="login_signup">회원가입</string>
    <string name="login_sns">SNS 로그인</string>
    <string name="login_google">Google 로그인</string>
</resources>