<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.mypage.MypageFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/mypage_title"
        android:textSize="@dimen/text_body"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appBar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_titleInformationEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="30dp"
        android:text="@string/mypage_information_edit_title"
        android:textSize="@dimen/text_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_myDogAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/mypage_information_dog_add"
        android:textSize="@dimen/text_caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleInformationEdit" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_addMyDog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintBottom_toBottomOf="@+id/tv_myDogAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_myDogAdd" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_myDogEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/mypage_information_dog_edit"
        android:textSize="@dimen/text_caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_myDogAdd" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_updateMyDog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintBottom_toBottomOf="@+id/tv_myDogEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_myDogEdit" />


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="@dimen/margin_medium"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_myDogEdit" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_titleUserManager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="30dp"
        android:text="@string/mypage_membership_management_title"
        android:textSize="@dimen/text_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/mypage_membership_management_sign_out"
        android:textSize="@dimen/text_caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleUserManager" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_signDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/mypage_membership_management_delete"
        android:textSize="@dimen/text_caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signOut" />

    <View
        android:id="@+id/tv_withdrawal"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="@dimen/margin_medium"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signDelete" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_privacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/mypage_privacy_policy"
        android:textSize="@dimen/text_caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_withdrawal" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:src="@drawable/ic_chevron_right"
        app:layout_constraintBottom_toBottomOf="@+id/tv_privacyPolicy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_privacyPolicy" />
</androidx.constraintlayout.widget.ConstraintLayout>